Improve JN comments

--- a/EmployeeSQL/4_Analysis.ipynb
+++ b/EmployeeSQL/4_Analysis.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "5bad04ed",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "60bbf93b",
    "metadata": {},
    "outputs": [
@@ -420,16 +420,20 @@
     }
    ],
    "source": [
+    "## Set plot values\n",
     "x = summary_df['emp_count']\n",
     "y = summary_df.index\n",
     "\n",
+    "## Plot parameters\n",
     "plt.figure(figsize=(7,5))\n",
     "plt.barh(y, width=x, height=0.6, color='green', alpha=0.5)\n",
     "\n",
+    "## Set plot title and x-labels\n",
     "plt.title('Number of Employees per Job Title', fontweight=\"bold\")\n",
     "plt.ylabel('')\n",
     "plt.xlabel('Employees')\n",
     "\n",
+    "## Format tickers\n",
     "plt.gca().xaxis.set_major_formatter(ticker.StrMethodFormatter('{x:,.0f}'))\n",
     "plt.gca().xaxis.get_major_ticks()[0].label1.set_visible(False)\n",
     "\n",
@@ -447,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "2bd83de4",
    "metadata": {},
    "outputs": [
@@ -463,12 +467,15 @@
     }
    ],
    "source": [
+    "## Set plot values\n",
     "x = summary_df['salary_avg']\n",
     "y = summary_df.index\n",
     "\n",
+    "## Plot parameters\n",
     "plt.figure(figsize=(7,5))\n",
     "plt.barh(y, width=x, height=0.5, color='red', alpha=0.5)\n",
     "\n",
+    "## Set plot title and x-labels\n",
     "plt.title('Average Salary per Job Title', fontweight=\"bold\")\n",
     "plt.ylabel('')\n",
     "plt.xlabel('Salary')\n",
@@ -477,6 +484,7 @@
     "for i in range(len(x)):\n",
     "    plt.text(2000, i-.1, f\"${x[i]:,.0f}\", color='purple')\n",
     "\n",
+    "## Format tickers\n",
     "plt.gca().xaxis.set_major_formatter(ticker.StrMethodFormatter('${x:,.0f}'))\n",
     "plt.gca().xaxis.get_major_ticks()[0].label1.set_visible(False)\n",
     "\n",
@@ -490,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "f31d9751",
    "metadata": {},
    "outputs": [
@@ -506,6 +514,7 @@
     }
    ],
    "source": [
+    "## Set plot values\n",
     "x1 = summary_df['emp_count']\n",
     "x2 = summary_df['salary_avg']\n",
     "y = summary_df.index\n",
@@ -516,10 +525,14 @@
     "fig.suptitle('Payroll Analysis', fontweight=\"bold\")\n",
     "\n",
     "## SUBPLOT [0]\n",
+    "## Subplot parameters\n",
     "ax[0].barh(y, width=x1, height=0.6, color='green', alpha=0.5)\n",
     "\n",
+    "## Set title and x-labels\n",
     "ax[0].set_title('Number of Employees per Job Title')\n",
     "ax[0].set_xlabel('Employees')\n",
+    "\n",
+    "## Format tickers\n",
     "ax[0].xaxis.set_major_formatter(ticker.StrMethodFormatter(\"{x:,.0f}\"))\n",
     "ax[0].xaxis.get_major_ticks()[0].label1.set_visible(False)\n",
     "\n",
@@ -528,20 +541,23 @@
     "    ax[0].text(2000, i-.1, f\"{x1[i]:,.0f}\", color='purple')\n",
     "\n",
     "## SUBPLOT [1]\n",
+    "## Subplot parameters\n",
     "ax[1].barh(y, width=x2, height=0.5, color='red', alpha=0.5)\n",
     "\n",
+    "## Set title and x-labels\n",
     "ax[1].set_title('Average Salary per Job Title')\n",
     "ax[1].set_xlabel('Salary')\n",
+    "\n",
+    "## Format tickers\n",
     "ax[1].xaxis.set_major_formatter(ticker.StrMethodFormatter(\"${x:,.0f}\"))\n",
     "ax[1].xaxis.get_major_ticks()[0].label1.set_visible(False)\n",
-    "\n",
     "ax[1].yaxis.set_tick_params(which='major', left=False, right=False)\n",
-    "\n",
     "\n",
     "## Display labels\n",
     "for i in range(len(x)):\n",
     "    ax[1].text(2000, i-.1, y[i], color='purple')\n",
     "\n",
+    "## Set grid\n",
     "ax[0].grid(axis='x', alpha=0.3)\n",
     "ax[1].grid(axis='x', alpha=0.3)\n",
     "\n",
@@ -550,14 +566,6 @@
     "## Display plot\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23674ffe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
